# poetry-devcontainer

./: Dockerfile  app.py  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
