[tool.poetry]
name = "my-favorite-service"
version = "0.1.1"
description = "nihao"
authors = ["yijun xu <yijun@ucare.io>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
